@@ -4567,7 +4567,7 @@
     ],
     "gold": 500,
     "name": "Attacker Tellurium Golem",
-    "note": "<Armor Weakness: Bludgeoning>\n<Element: Metal>\n<Passive State: 136, 140>\n\n<Breathing Speed: 20>\n<Attack Animation: 4>\n\n<Enemy Drops>\nTellurium Dust: 10%\nCopper Cluster: 100%\nCopper Cluster: 100%\nCopper Cluster: 50%\nCopper Cluster: 50%\nCopper Cluster: 25%\nCopper Cluster: 25%\nIron Cluster: 100%\nIron Cluster: 100%\nIron Cluster: 50%\nIron Cluster: 50%\nIron Cluster: 25%\nIron Cluster: 25%\nMetal Essence: 20%\n</Enemy Drops>",
+    "note": "<Armor Weakness: Bludgeoning>\n<Element: Metal>\n<Passive State: 136, 140>\n\n<Breathing Speed: 20>\n<Attack Animation: 4>\n\n<Enemy Drops>\nTellurium Dust: 25%\nTellurium Core: 25%\nCopper Cluster: 100%\nCopper Cluster: 100%\nCopper Cluster: 50%\nCopper Cluster: 50%\nCopper Cluster: 25%\nCopper Cluster: 25%\nIron Cluster: 100%\nIron Cluster: 100%\nIron Cluster: 50%\nIron Cluster: 50%\nIron Cluster: 25%\nIron Cluster: 25%\nMetal Essence: 20%\n</Enemy Drops>",
     "params": [
       12000,
       0,
@@ -4628,7 +4628,7 @@
     ],
     "gold": 500,
     "name": "Defender Tellurium Golem",
-    "note": "<Armor Weakness: Bludgeoning>\n<Element: Metal>\n<Passive State: 136, 140>\n\n<Breathing Speed: 20>\n<Attack Animation: 4>\n\n<Enemy Drops>\nTellurium Dust: 10%\nCopper Cluster: 100%\nCopper Cluster: 100%\nCopper Cluster: 50%\nCopper Cluster: 50%\nCopper Cluster: 25%\nCopper Cluster: 25%\nIron Cluster: 100%\nIron Cluster: 100%\nIron Cluster: 50%\nIron Cluster: 50%\nIron Cluster: 25%\nIron Cluster: 25%\nMetal Essence: 20%\n</Enemy Drops>",
+    "note": "<Armor Weakness: Bludgeoning>\n<Element: Metal>\n<Passive State: 136, 140>\n\n<Breathing Speed: 20>\n<Attack Animation: 4>\n\n<Enemy Drops>\nTellurium Dust: 25%\nTellurium Core: 25%\nCopper Cluster: 100%\nCopper Cluster: 100%\nCopper Cluster: 50%\nCopper Cluster: 50%\nCopper Cluster: 25%\nCopper Cluster: 25%\nIron Cluster: 100%\nIron Cluster: 100%\nIron Cluster: 50%\nIron Cluster: 50%\nIron Cluster: 25%\nIron Cluster: 25%\nMetal Essence: 20%\n</Enemy Drops>",
     "params": [
       12000,
       0,
