@@ -2181,10 +2181,10 @@
     "hitType": 0,
     "iconIndex": 0,
     "itypeId": 1,
-    "name": "",
+    "name": "Tellurium Core",
     "note": "Was once the DALIA'S RECIPES.",
     "occasion": 0,
-    "price": 0,
+    "price": 1000,
     "repeats": 1,
     "scope": 7,
     "speed": 0,
@@ -7046,7 +7046,7 @@
     "name": "Ectoplasm",
     "note": "<Synthesis Ingredients>\nEctoblood: 4\nGazer Goop: 2\n</Synthesis Ingredients>\n<Mask Name: Ghostly Essence>\n\n<Disassemble Pool: Monster>\nx9-12 Ground Monster Parts: 100%\n</Disassemble Pool: Monster>",
     "occasion": 3,
-    "price": 50,
+    "price": 100,
     "repeats": 1,
     "scope": 0,
     "speed": 0,
