@@ -1628,7 +1628,7 @@
     ],
     "iconIndex": 692,
     "name": "Bloodlust ★★",
-    "note": "<Weapon Image: 206>\n<Upgrade Slots: 3>\n<HP Life Steal Physical: +6%>\n\n<Synthesis Ingredients>\nBloodlust ★\nGrass Knuckles\nFrost Edge\nSTR Scroll ★: 3\nDisposable Hammer: 5\nEnchanting Crystal: 5\nTellurium Alloy\n</Synthesis Ingredients>\n<Mask Name: Even Better Bloody Dagger>",
+    "note": "<Weapon Image: 206>\n<Upgrade Slots: 3>\n<HP Life Steal Physical: +6%>\n\n<Synthesis Ingredients>\nBloodlust ★\nGrass Knuckles\nFrost Edge\nSTR Scroll ★\nTellurium Alloy: 3\nTellurium Core\n</Synthesis Ingredients>\n<Mask Name: Even Better Bloody Dagger>",
     "params": [
       10,
       5,
@@ -1666,7 +1666,7 @@
     ],
     "iconIndex": 1204,
     "name": "Hero Sword Replica",
-    "note": "<Weapon Image: 346>\n<Upgrade Slots: 3>\n\n<Synthesis Ingredients>\nSquire Sword\nCopper Sword\nSteel Sword\nBronze Sword\nShadowspec Sword\nBronze Greatsword\nSteel Greatsword\nSteel Axe\nUnstoppable Force\nTellurium Alloy\n</Synthesis Ingredients>\n<Mask Name: Legendary Blade Copy>",
+    "note": "<Weapon Image: 346>\n<Upgrade Slots: 3>\n\n<Synthesis Ingredients>\nSquire Sword\nCopper Sword\nSteel Sword\nBronze Sword\nShadowspec Sword\nBronze Greatsword\nSteel Greatsword\nSteel Axe\nUnstoppable Force\nTellurium Alloy: 3\n</Synthesis Ingredients>\n<Mask Name: Legendary Blade Copy>",
     "params": [
       0,
       0,
@@ -1828,7 +1828,7 @@
     ],
     "iconIndex": 421,
     "name": "Tellurium Wand",
-    "note": "<Weapon Image: 258>\n<Upgrade Slots: 3>\n\n<Synthesis Ingredients>\nBronze Wand\nSPI Scroll ★: 2\nDisposable Hammer: 5\nEnchanting Crystal: 8\nTellurium Alloy: 6\n</Synthesis Ingredients>\n<Mask Name: Alloy-Based Wand>",
+    "note": "<Weapon Image: 258>\n<Upgrade Slots: 3>\n\n<Synthesis Ingredients>\nBronze Wand\nSPI Scroll ★\nTellurium Alloy: 8\nTellurium Core\n</Synthesis Ingredients>\n<Mask Name: Alloy-Based Wand>",
     "params": [
       0,
       22,
@@ -1866,7 +1866,7 @@
     ],
     "iconIndex": 414,
     "name": "Harmony",
-    "note": "<Weapon Image: 294>\n<Upgrade Slots: 3>\n<HP Life Steal Physical: +12.5%>\n<HP Life Steal Magical: +5%>\n<MP Life Steal Physical: +15%>\n\n<Synthesis Ingredients>\nLife Crystal Staff\nMana Crystal Staff\nPassion\nMana Staff\nTellurium Alloy\n</Synthesis Ingredients>\n<Mask Name: Harmonious Staff>",
+    "note": "<Weapon Image: 294>\n<Upgrade Slots: 3>\n<HP Life Steal Physical: +12.5%>\n<HP Life Steal Magical: +5%>\n<MP Life Steal Physical: +15%>\n\n<Synthesis Ingredients>\nLife Crystal Staff\nMana Crystal Staff\nPassion\nMana Staff\nTellurium Alloy: 3\nTellurium Core\n</Synthesis Ingredients>\n<Mask Name: Harmonious Staff>",
     "params": [
       0,
       25,
@@ -2053,7 +2053,7 @@
     ],
     "iconIndex": 1234,
     "name": "Tellurium Spellbook",
-    "note": "<Upgrade Slots: 3>\n\n<Synthesis Ingredients>\nBlank Tome\nSPI Scroll ★: 2\nDisposable Hammer: 5\nEnchanting Crystal: 10\nTellurium Alloy: 6\n</Synthesis Ingredients>\n<Mask Name: Alloy-Based Book>",
+    "note": "<Upgrade Slots: 3>\n\n<Synthesis Ingredients>\nBlank Tome\nSPI Scroll ★\nTellurium Alloy: 8\nTellurium Core\n</Synthesis Ingredients>\n<Mask Name: Alloy-Based Book>",
     "params": [
       0,
       400,
