@@ -54,7 +54,7 @@ Additions:
    > Soul Shackles: Tome
    > Wyvern's Fury: Weapon, Tome
    > Ice II: Tome
- - 118 new items:
+ - 119 new items:
   ~ 15 recovery/buff items:
    > Blueberry Sizzle
    > Offense Combination
@@ -84,7 +84,7 @@ Additions:
    > Wheat Seeds
    > Oat Seeds
    > Tomato Seeds
-  ~ 40 materials:
+  ~ 41 materials:
    > Plant Essence
    > Metal Essence
    > Coal
@@ -116,6 +116,7 @@ Additions:
    > Ectoplasm
    > Fiery Blood
    > Rotten Flesh
+   > Tellurium Core
    > Tellurium Dust
    > Tellurium Alloy
    > Life Crystal
